Build with r_checked_revfep=true in travis conf faliled so we are falling back to false

--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Changes in RODBCext 0.2.5 (2015-06-30)
 
-  * force_loop=FALSE parameter added to sqlExecute() acting as a workaround
-    for queries wchich has to be planned again before each ODBC'a sqlExecute()
+  * force_loop=FALSE parameter added to sqlExecute() as a workaround for 
+    queries wchich have to be planned again before each ODBC'a sqlExecute()
     call (e.g. "EXEC"" queries on MS SQL Server). 
     Setting force_loop=TRUE allows to use a vectorized form of the sqlExecute()
     despite this limitation by forcing sqlExecute() to plan a query again
