protect against 0-length data frames
examples
*
http://stackoverflow.com/questions/24917228/proper-way-to-loop-over-the-length-of-a-dataframe-in-r
* http://r.789695.n4.nabble.com/seq-along-and-rep-along-td4270377.html

--- a/vignettes/Parameterized_SQL_queries.Rmd
+++ b/vignettes/Parameterized_SQL_queries.Rmd
@@ -78,7 +78,7 @@ library(RODBC)
 connHandle <- odbcConnect("cakesDatabase")
 newData <- read.csv("newData.csv", stringsAsFactors = F)
 
-for(row in 1:nrow(newData)){
+for(row in seq_len(nrow(newData))){
   query <- paste0(
     "UPDATE cakes 
      SET price = ", newData$price[row], " 
@@ -121,7 +121,7 @@ library(RODBC)
 connHandle <- odbcConnect('studentsDatabase')
 newStudents <- read.csv('newStudents.csv', stringsAsFactors = F)
 
-for(row in 1:nrow(newStudents)){
+for(row in seq_len(nrow(newStudents))){
   query <- paste0(
     "INSERT INTO students (first_name, last_name)
      VALUES (
@@ -213,7 +213,7 @@ connHandle <- odbcConnect("cakesDatabase")
 newData <- read.csv("newData.csv", stringsAsFactors = F)
 
 query <- "UPDATE cakes SET price = ? WHERE cake = ?"
-for(row in 1:nrow(newData)){
+for(row in seq_len(nrow(newData))){
   sqlExecute(connHandle, query, newData[i, ])
 }
 
@@ -298,7 +298,7 @@ data <- data.frame(1:10000, letters[rep(1:10, 1000)])
 
 # Ordinary query - paste0() called in every loop
 system.time({
-  for(row in 1:nrow(data)){
+  for(row in seq_len(nrow(data))){
     query <- paste0("INSERT INTO my_table VALUES (", data[row, 1], "'", data[row, 2],"')")
     sqlQuery(connHandle, query)
   }
